--- a/src/main/resources/templates/newPost.html
+++ b/src/main/resources/templates/newPost.html
@@ -14,7 +14,7 @@
     <input type="text" th:field="*{title}" id="title" placeholder="Title">
     <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
     <label for="content">Content</label>
-    <input type="textarea" th:field="*{content}" id="content" placeholder="Content">
+    <textarea type="text" th:field="*{content}" id="content" placeholder="Content"></textarea>
     <span th:if="${#fields.hasErrors('content')}" th:errors="*{content}"></span>
     <input type="submit" value="Add Post">
 </form>
