Bæta við takka til að lika nr 1 commit

--- a/src/main/resources/templates/forum.html
+++ b/src/main/resources/templates/forum.html
@@ -30,6 +30,12 @@
                 <td th:text="${post.user.getUsername()}">Author</td>
                 <td th:text="${post.getLikes()}">Likes</td>
                 <td th:text="${post.getDislikes()}">Dislikes</td>
+                <td>
+                    <form th:action="@{/post/{postId}(postId=${post.post_id})}" method="post">
+                        <button type="submit">Like Post</button>
+                    </form>
+                </td>
+
             </tr>
             </tbody>
         </table>
